Fix menu to not wrap

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -29,12 +29,13 @@
 }
 
 .menu {
+  align-self: center;
 }
 
 .menu ul {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .menu ul,
